Text fields added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         g.node > rect {
             stroke-weight: 1px;
         }
+        input {
+            border: none;
+            padding: 0px;
+            background-color: rgba(255,255,255,0.0);
+        }
     </style>
 
     <script type="application/javascript" src="lib/jquery-1.11.3.min.js"></script>
